--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/Logo.jpg" alt="">
+                        <img src="images/mexi.gif" alt="">
                         <div class="text">Mexi</div>
                         <p>I am “Mexi”, one of the Managing Partners here at Prestige. My role here at Prestige is running the
                         administrative and business side of Prestige. Everything from HR to customer service and more. I have
