--- a/index.html
+++ b/index.html
@@ -76,28 +76,31 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
-                        <div class="text">Stock Trading</div>
-                        <p>Stock Analysts Specializing in Day and Swing Trade Alerts with Signal Updates.</p>
+                        <div class="text">Stock & Option Trading</div>
+                        <p> Analysts Specializing in Day and Swing Trade Alerts with Signal Updates.</p>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-file-invoice-dollar"></i>
-                        <div class="text">Options trading</div>
-                        <p>Options Analyst Specializing in both Day and Swing Trade Alerts with Signal Updates, as well as learning content.</p>
-                    </div>
-                </div>
+                       </div>
                 <div class="card">
                     <div class="box">
                         <i class="fab fa-bitcoin"></i>
                         <div class="text">Cryptocurrency Trading</div>
                         <p>Crypto Analyst Specializing In Swing and Daytrade Alerts With Signal Updates, as well as learning content.</p>
+    
                     </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-file-invoice-dollar"></i>
+                        <div class="text">Private Learning Sessions </div><a href="https://Prestigeinvestments.booksy.com">
+                        <p> Get a one-on-one learning session with a experienced trader. Click Here to Book  .</p>
+                    </div>
+             
                 </div>
                </div>
             </div>
         </div>
     </section>
+
 
     <!-- skills section start -->
     <section class="skills" id="skills">
