--- a/index.html
+++ b/index.html
@@ -125,11 +125,9 @@
                     </div>
                 </div>
                     <div class="card">
-                    <div class="box">
+                    <div class="box"><a href"https://payprestigeinv.com/subscribe/?plan=prime"></span></a>
                         <i class="fas fa-hat-wizard"></i>
                         <div class="text"><a href="https://payprestigeinv.com/subscribe/?plan=prime"><h2>Prime($20)<h2></a></div>
-                        <p> 
-                       <h1> -Free Stock Alerts</h1>
                        <h1> -Free Option Alerts</h1>
                        <h1> - Free Chat Rooms</h1>
                         <h1>- Free Beginner Guides</h1>
@@ -143,7 +141,7 @@
                        <h1> -Educational PDFs + Videos</h1>
                        <h1> -Health + Fitness Guides</h1>
                        <h1> -Voice Channels</h1>
-                       <a href="https://payprestigeinv.com/subscribe/?plan=prime">
+                      
                         </p>
                     </div>
                 </div>
@@ -265,11 +263,11 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/Fluffy.png" alt="">
-                        <div class="text">Fluffy</div>
-                        <p>Hi my name is Fluffy I am a lead analyst options trader here at Prestige, I am a Prestige members only
+                        <img src="images/loki.png" alt="">
+                        <div class="text">Loki</div>
+                        <p>Hi my name is Fluffy I am a Lead Crypto  trader here at Prestige, I am a Prestige members only
                             trader.When I look for plays, I tend to follow gap fills play. Gap up or Gap down plays tend to make you
-                            tons of money, but with very high risk, high reward! I also find plays base on the company background.
+                            tons of money, but with very high risk, high reward!
                             You have to do major hours of DD and research on it. When holding onto a play for a long time, you
                             have to be confident and not have weak hand. That is how I usually play my calls.
                         </p>
