--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
                     <div class="box">
                         <img src="images/loki.png" alt="">
                         <div class="text">Loki</div>
-                        <p>Hi my name is Fluffy I am a Lead Crypto  trader here at Prestige, I am a Prestige members only
-                            trader.When I look for plays, I tend to follow gap fills play. Gap up or Gap down plays tend to make you
+                        <p>Hi my name is Loki I am a Lead Crypto  trader here at Prestige, I am a Prestige members only
+                            trader.When I look for plays, I tend to look for breakouts/breakdowns.  Breakout plays tend to make you
                             tons of money, but with very high risk, high reward!
                             You have to do major hours of DD and research on it. When holding onto a play for a long time, you
                             have to be confident and not have weak hand. That is how I usually play my calls.
